K8S/ingress/aws-alb/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  labels:
    app: blog
  annotations:
    kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/subnets: subnet-1042eb4a, subnet-e66c0380, subnet-a4e29dec
spec:
  rules:
    - http:
        paths:
          - path: /blog/*
            backend:
              serviceName: blog
              servicePort: 80
